⚡️ First REST-method implemented
